# Makula

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  groups  main.cpp  models.txt  project.config  svm_vfh_model_rbf.txt  test.pcd  test2.pcd  trained_svm_final.txt
benchmark/: benchmark  klein.benchmark  makula.benchmark  makula_omp.benchmark  output.txt
cmake/: FindGMock.cmake  GetGMock.cmake
core/: CMakeLists.txt
core/include/base/: buffer.h  channel.h
core/test/: buffer_unit_test.cpp  channel_unit_test.cpp
examples/: CMakeLists.txt  example_buffer.cpp  example_channel.cpp  example_process.cpp  example_process_simple.cpp  example_worker_pool.cpp
include/makula/base/: buffer.h  channel.h  consumer.h  pipe.h  process.h  process_connecter.h  producer.h  worker_pool.h
include/makula/recognition/: classification_base.h  clustering_base.h  data_source_base.h  filtering_base.h  localization_base.h
include/makula/recognition/pcl/: classifying.h  clustering.h  filtering.h  localization.h  object.h  point_cloud_source.h  point_cloud_source_mock.h  point_cloud_viewer.h
io/: CMakeLists.txt  Doxyfile.in
io/include/: iostreambase.h  pclkinectstream.h
io/src/: pclkinectstream.cpp
models/: 1.pcd  2.pcd  3.pcd  4.pcd  5.pcd  6.pcd  7.pcd
src/recognition/: CMakeLists.txt
src/recognition/pcl/: CMakeLists.txt  benchmark.cpp  classifying.cpp  clustering.cpp  filtering.cpp  localization.cpp  main.cpp  object.cpp  point_cloud_source.cpp  point_cloud_source_mock.cpp  point_cloud_viewer.cpp
test/: CMakeLists.txt  buffer_unit_test.cpp  channel_unit_test.cpp  core_tests.cpp  processes_unit_test.cpp  worker_pool_unit_test.cpp
